@@ -1,28 +1,30 @@
 package com.education.education.security;
 
-import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @Getter
-@AllArgsConstructor
 public class UserPrincipal implements UserDetails {
+    private final String loginId;
+    private final String role;
 
-    private final Long userId;
-    private final String email;
+    public UserPrincipal(String loginId, String role) {
+        this.loginId = loginId;
+        this.role = role;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        return Collections.singletonList(new SimpleGrantedAuthority(role.startsWith("ROLE_") ? role : "ROLE_" + role));
     }
 
-    @Override public String getPassword() { return ""; }
-    @Override public String getUsername() { return email; }
+    @Override public String getPassword() { return null; }
+    @Override public String getUsername() { return loginId; }
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
